@@ -1,7 +1,6 @@
 package com.chouchong.utils.upload;
 
 import com.chouchong.utils.properties.GetProperties;
-import sun.misc.BASE64Decoder;
 
 import javax.imageio.ImageIO;
 import java.awt.image.BufferedImage;
@@ -10,6 +9,7 @@ import java.io.ByteArrayInputStream;
 import java.io.File;
 import java.io.IOException;
 import java.text.SimpleDateFormat;
+import java.util.Base64;
 import java.util.Date;
 import java.util.Random;
 
@@ -45,7 +45,7 @@ public class ImageUtils {
         /** 如果图片的存储路不存在，就创建图片的存储路径 **/
         createDirs(ImgPath);
         /** 解码base64 **/
-        byte[] byteArray = (new BASE64Decoder()).decodeBuffer(base64);
+        byte[] byteArray = Base64.getDecoder().decode(base64);
         /** 字节数组转为输入流 **/
         BufferedInputStream is = new BufferedInputStream(new ByteArrayInputStream(byteArray));
         /** 读取为buffer流 **/
